# libircii

./: .gitignore  CHANGES  Makefile.in  build  configure  libircii.c  libircii.h  numeric.h
config/: Makefile  configure.in
